Fixing block alignment and width when nested in the group block.

--- a/sass/blocks/_blocks.scss
+++ b/sass/blocks/_blocks.scss
@@ -823,6 +823,19 @@
 		}
 	}
 
+	//! Group Block
+	.wp-block-group {
+		padding-left: 0;
+		padding-right: 0;
+		&.alignfull,
+		&.alignwide {
+			> * {
+				max-width: 780px;
+			}
+
+		}
+	}
+
 	//! Newspack Block
 
 	.wp-block-newspack-blocks-homepage-articles {
