--- a/style-rtl.css
+++ b/style-rtl.css
@@ -3103,6 +3103,11 @@ a:focus {
   }
 }
 
+.newspack-front-page .entry .entry-content > *.wp-block-group {
+  padding-right: 0;
+  padding-left: 0;
+}
+
 .newspack-front-page .entry .entry-content > *.wp-block-group.alignfull > *, .newspack-front-page .entry .entry-content > *.wp-block-group.alignwide > * {
   max-width: 90%;
   width: 1200px;
