--- a/styles/style-1.css
+++ b/styles/style-1.css
@@ -3062,6 +3062,16 @@ a:focus {
   }
 }
 
+.newspack-front-page .entry .entry-content > *.wp-block-group {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.newspack-front-page .entry .entry-content > *.wp-block-group.alignfull > *, .newspack-front-page .entry .entry-content > *.wp-block-group.alignwide > * {
+  max-width: 90%;
+  width: 1200px;
+}
+
 /*
  * Unset nested content selector styles
  * - Prevents layout styles from cascading too deeply
@@ -3767,6 +3777,15 @@ a:focus {
 
 .entry .entry-content .wp-block-latest-comments.has-dates .wp-block-latest-comments__comment-date {
   font-size: 0.71111em;
+}
+
+.entry .entry-content .wp-block-group {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.entry .entry-content .wp-block-group.alignfull > *, .entry .entry-content .wp-block-group.alignwide > * {
+  max-width: 780px;
 }
 
 .entry .entry-content .wp-block-newspack-blocks-homepage-articles .article-meta {
